# bank-statement-automation

./: .gitignore  README.md  alembic.ini  migrate.py  pyproject.toml  requirements.txt  setup.py
app/: main.py
app/api/: controllers.py  routes.py
app/core/: document_analyzer.py  normalizer.py  tasks.py  validator.py
app/core/extractors/: csv_extractor.py  image_extractor.py  pdf_extractor.py
app/core/parsers/: ml_parser.py  transaction_parser.py
app/database/: db.py
app/database/repositories/: statement_repository.py  transaction_repository.py
app/integrations/: generic_integration.py  tally_integration.py
app/models/: account.py  init.py  statement.py  transaction.py
app/utils/: helpers.py  logger.py  monitoring.py
config/: config.py
config/bank_templates/: bank_a_template.json
migrations/: env.py
migrations/versions/: 001_initial.py  20250404_0723_76602a9404ad_initial_database_setup.py
ml/models/: model.py
ml/preprocessing/: preprocessor.py
ml/training/: train_extractor.py
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: test_pipeline.py
tests/performance/: test_performance.py
tests/unit/: test_extractors.py  test_parsers.py
